--- a/Abstracion-Interfaces/Abstracion.csproj
+++ b/Abstracion-Interfaces/Abstracion.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Arma.cs" />
     <Compile Include="Enum.cs" />
     <Compile Include="Escopeta.cs" />
+    <Compile Include="Interface1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rifle.cs" />
